@@ -39,6 +39,26 @@ namespace SlimDX
 {
 namespace Direct3D9
 {
+	DeviceEx::DeviceEx( IDirect3DDevice9Ex* direct3d, ComObject^ owner )
+	{
+		Construct( direct3d, owner );
+	}
+
+	DeviceEx::DeviceEx( IntPtr pointer )
+	{
+		Construct( pointer, NativeInterface );
+	}
+	
+	DeviceEx^ DeviceEx::FromPointer( IDirect3DDevice9Ex* pointer, ComObject^ owner, ComObjectFlags flags ) 
+	{
+		return ComObject::ConstructFromPointer<DeviceEx,IDirect3DDevice9Ex>( pointer, owner, flags );
+	}
+	
+	DeviceEx^ DeviceEx::FromPointer( IntPtr pointer )
+	{
+		return ComObject::ConstructFromUserPointer<DeviceEx>( pointer );
+	}
+
 	void DeviceEx::Internal_Constructor( Direct3DEx^ direct3D, int adapter, DeviceType deviceType, System::IntPtr controlHandle,
 				CreateFlags createFlags, D3DDISPLAYMODEEX* fullscreenDisplayMode, ... array<PresentParameters^>^ presentParameters )
 	{
